Travis / README / Testfile

--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,10 @@
 /.idea
-/bin/*
+/bin
+/dist
 /glade/*.gresource
 /pkg
 /src/github.com
 /src/golang.org
 /vendor
+/gotk3-glade-example
 !/bin/.gitkeep
