--- a/.travis.yml
+++ b/.travis.yml
@@ -15,13 +15,15 @@ before_install:
   - sudo apt-get install -qq -y glide xvfb gtk+3.0 libgtk-3-dev libcairo2-dev libglib2.0-dev
   - glide install
   - ln -sr vendor/github.com src/github.com
-  - "export DISPLAY=:99.0"
+  - export DISPLAY=:99.0
   - sudo /usr/bin/Xvfb $DISPLAY 2>1 > /dev/null &
-  - "export GTK_VERSION=$(pkg-config --modversion gtk+-3.0 | tr . _| cut -d '_' -f 1-2)"
-  - "export Glib_VERSION=$(pkg-config --modversion glib-2.0)"
-  - "export Cairo_VERSION=$(pkg-config --modversion cairo)"
-  - "export Pango_VERSION=$(pkg-config --modversion pango)"
-  - echo "GTK version ${GTK_VERSION} (Glib ${Glib_VERSION}, Cairo ${Cairo_VERSION}, Pango ${Pango_VERSION})"
+  - export GTK_VERSION=$(pkg-config --modversion gtk+-3.0 | tr . _| cut -d '_' -f 1-2)
+  - export Glib_VERSION=$(pkg-config --modversion glib-2.0)
+  - export Cairo_VERSION=$(pkg-config --modversion cairo)
+  - export Pango_VERSION=$(pkg-config --modversion pango)
+  - echo "GTK version ${GTK_VERSION}"
+  - echo "GTK version $(pkg-config --modversion gtk+-3.0)"
+  - echo $(pkg-config --modversion gtk+-3.0)
 
 install:
   - go install -v -tags "gtk_${GTK_VERSION}"
