--- a/.travis.yml
+++ b/.travis.yml
@@ -5,15 +5,22 @@ env:
   - GOARCH=amd64
 dist: trusty
 sudo: required
+addons:
+  apt:
+    sources:
+    - xvfb
+    - gtk+3.0
+    - libgtk-3-dev
+    - libcairo2-dev
+    - libglib2.0-dev
 notifications:
   email: false
 before_install:
-  - sudo add-apt-repository ppa:masterminds/glide -y
-  - sudo apt-get -qq update
-  - sudo apt-get install -qq -y glide xvfb gtk+3.0 libgtk-3-dev libcairo2-dev libglib2.0-dev
+  - go get -v github.com/Masterminds/glide
+  - cd $GOPATH/src/github.com/Masterminds/glide && git checkout tags/0.12.3 && go install && cd -
   - glide install
-  - cp -r vendor/github.com src/github.com
-#  - ln -sr vendor/github.com src/github.com
+  - ls -la
+  - ln -sr vendor/github.com src/github.com
   - export DISPLAY=:99.0
   - sudo /usr/bin/Xvfb $DISPLAY 2>1 > /dev/null &
   - export GTK_VERSION=$(pkg-config --modversion gtk+-3.0 | tr . _| cut -d '_' -f 1-2)
@@ -21,8 +28,6 @@ before_install:
   - export Cairo_VERSION=$(pkg-config --modversion cairo)
   - export Pango_VERSION=$(pkg-config --modversion pango)
 install:
-  - echo "GTK ${GTK_VERSION} - Glib ${Glib_VERSION} - Cairo ${Cairo_VERSION} - Pango ${Pango_VERSION}"
   - go install -v -tags "gtk_${GTK_VERSION}"
 script:
-  - echo "GTK ${GTK_VERSION} - Glib ${Glib_VERSION} - Cairo ${Cairo_VERSION} - Pango ${Pango_VERSION}"
   - go test -v -tags "gtk_${GTK_VERSION}"
