--- a/.travis.yml
+++ b/.travis.yml
@@ -5,20 +5,10 @@ env:
   - GOARCH=amd64
 dist: trusty
 sudo: required
-addons:
-  apt:
-    sources:
-    - xvfb
-    - gtk+3.0
-    - libgtk-3-dev
-    - libcairo2-dev
-    - libglib2.0-dev
-notifications:
-  email: false
 before_install:
   - sudo add-apt-repository ppa:masterminds/glide -y
   - sudo apt-get update -qq
-  - sudo apt-get install -y glide
+  - sudo apt-get install -y glide xvfb gtk+3.0 libgtk-3-dev libcairo2-dev libglib2.0-dev
   - glide install
   - ls -la
   - ln -sr vendor/github.com src/github.com
@@ -32,3 +22,5 @@ install:
   - go install -v -tags "gtk_${GTK_VERSION}"
 script:
   - go test -v -tags "gtk_${GTK_VERSION}"
+notifications:
+  email: false
