--- a/.travis.yml
+++ b/.travis.yml
@@ -10,7 +10,6 @@ before_install:
   - sudo apt-get update -qq
   - sudo apt-get install -y glide xvfb gtk+3.0 libgtk-3-dev libcairo2-dev libglib2.0-dev
   - glide install
-  - ls -la
   - ln -sr vendor/github.com src/github.com
   - export DISPLAY=:99.0
   - sudo /usr/bin/Xvfb $DISPLAY 2>1 > /dev/null &
@@ -19,8 +18,10 @@ before_install:
   - export Cairo_VERSION=$(pkg-config --modversion cairo)
   - export Pango_VERSION=$(pkg-config --modversion pango)
 install:
+  - echo "tag gtk_${GTK_VERSION}"
   - go install -v -tags "gtk_${GTK_VERSION}"
 script:
-  - go test -v -tags "gtk_${GTK_VERSION}"
+  - echo "tag gtk_${GTK_VERSION}"
+    - go test -v -tags "gtk_${GTK_VERSION}"
 notifications:
   email: false
