--- a/.github/workflows/golangci.yml
+++ b/.github/workflows/golangci.yml
@@ -2,9 +2,9 @@ name: GolangCI
 
 on:
   push:
-    branches: [ "main" ]
+    branches: [ "master" ]
   pull_request:
-    branches: [ "main" ]
+    branches: [ "master" ]
 
 jobs:
 
